--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,37 @@
-databases:
-  - name: budget-tracker
-    databaseName: budget-tracker
-    user: budget-tracker
-
 services:
-  - type: web
-    name: budget-tracker
+  # Create a redis instance
+  - type: redis
+    name: sidekiq-redis
+    region: ohio
+    maxmemoryPolicy: noeviction
+    ipAllowList: []
+
+  # Let's create our background worker
+  - type: worker
+    name: sidekiq-worker
     env: ruby
-    plan: free
-    buildCommand: "./bin/render-build.sh"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    region: ohio
+    buildCommand: bundle install
+    startCommand: bundle exec sidekiq -r ./main.rb
+    autoDeploy: false
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: budget-tracker
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: sidekiq-redis
           property: connectionString
-      - key: SESSION_SECRET
-        sync: false
+
+  # Create the web server hosting sinatra
+  - type: web
+    name: sinatra-web
+    env: ruby
+    region: ohio
+    buildCommand: bundle install
+    startCommand: bundle exec ruby main.rb
+    autoDeploy: false
+    envVars:
+      - key: REDIS_URL
+        fromService:
+          type: redis
+          name: sidekiq-redis
+          property: connectionString
